--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blockly",
-  "version": "4.20201217.0",
+  "version": "4.20210302.cyb3r",
   "description": "Blockly is a library for building visual programming editors.",
   "keywords": [
     "blockly"
